fixed divider, fixed overflow and added background navbar

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,18 +13,13 @@ a {
 
 body,
 html {
-  width: 100vw;
-  height: 100%;
-  // background: url('https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fwallpapercave.com%2Fwp%2FpEeUsp1.jpg&f=1&nofb=1');
-  // background: url('https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallpaperplay.com%2Fwalls%2Ffull%2F3%2F0%2F7%2F17345.jpg&f=1&nofb=1');
-  // background-size: cover;
-
+  width: calc(100vw - 180px);
+  height: 100vh;
   background-color: #000000;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='250' height='30' viewBox='0 0 1000 120'%3E%3Cg fill='none' stroke='%23222' stroke-width='10' %3E%3Cpath d='M-500 75c0 0 125-30 250-30S0 75 0 75s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 45c0 0 125-30 250-30S0 45 0 45s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 105c0 0 125-30 250-30S0 105 0 105s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 15c0 0 125-30 250-30S0 15 0 15s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500-15c0 0 125-30 250-30S0-15 0-15s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 135c0 0 125-30 250-30S0 135 0 135s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3C/g%3E%3C/svg%3E");
 
   position: absolute;
   line-height: 1.1em;
-  overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
 }
 
@@ -41,26 +36,29 @@ body {
   text-transform: uppercase;
   padding-bottom: 2px;
   transition: .3s ease-in-out;
+
+  &:hover {
+    opacity: .7;
+  }
 }
 
 // HOME PAGE
 
 #home {
   // display: none;
-  width: 100vw;
-  height: 100vh;
-
-}
-
-.main-menu {
   width: 100%;
-  line-height: 100vh;
-  text-align: center;
-  font-size: 1.4em;
-  font-weight: 300;
+  margin: 0 90px;
 
-  span {
-    margin: 20px;
+  .main-menu {
+    width: 100%;
+    line-height: 100vh;
+    text-align: center;
+    font-size: 1.4em;
+    font-weight: 300;
+
+    span {
+      margin: 20px;
+    }
   }
 }
 
@@ -68,11 +66,12 @@ body {
 
 #work {
   display: none;
-  width: calc(100vw - 180px);
+  width: 100%;
   height: auto;
-  margin: 0 auto;
-  margin-top: 100px;
+  margin: 0 90px;
+  margin-top: 90px;
   text-align: center;
+  overflow-y: visible;
 
   .container {
     position: relative;
@@ -95,7 +94,7 @@ body {
           width: 100%;
           height: auto;
           border-radius: 8px;
-          opacity: .85;
+          opacity: .8;
           transition: .4s ease-in-out;
         }
       }
@@ -103,7 +102,7 @@ body {
       .content {
         position: absolute;
         width: 80%;
-        background: rgba(0, 0, 0, .9);
+        background: rgba(0, 0, 0, .8);
         border-radius: 8px;
         left: 50%;
         bottom: 25px;
@@ -150,6 +149,43 @@ body {
 
 #about {
   display: none;
+  width: 100%;
+  height: auto;
+  margin: 0 90px;
+  margin-top: 90px;
+
+  .container {
+    position: relative;
+    margin-top: 90px;
+    margin-bottom: 90px;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    justify-items: center;
+    align-items: center;
+
+    .profile {
+      width: 18vw;
+      height: 18vw;
+      // background: url('/img/profile.jpg');
+      background: white;
+      background-size: cover;
+    }
+
+    .info {
+      width: 70%;
+    }
+  }
+
+  .icons {
+    position: relative;
+    margin: 50px 0;
+    display: flex;
+    justify-content: center;
+
+    img {
+      padding: 0 45px;
+    }
+  }
 }
 
 // TOP MENU
@@ -157,18 +193,15 @@ body {
 #top-menu {
   display: none;
   position: fixed;
-  // background: rgba(0, 0, 0, .8);
   width: 100%;
   height: 100px;
   line-height: 100px;
+  padding-right: 80px;
   z-index: 100;
-  padding-right: 95px;
   text-align: right;
   font-size: 1.2em;
   font-weight: 300;
   top: 0;
-  left: 50%;
-  transform: translateX(-50%);
   box-sizing: border-box;
 
   span {
@@ -180,24 +213,24 @@ body {
 
 .divider {
   position: relative;
-  margin-top: 100px;
+  margin-top: 90px;
   width: 100%;
   display: flex;
+  justify-content: center;
   align-items: center;
 
-  .line {
-    background: white;
-    width: 100%;
-    height: 1px;
+  span {
+    padding: 0 25px;
+    font-weight: 300;
   }
 
-  .header {
-    background: #000;
-    padding: 0 25px;
-    position: absolute;
-    font-weight: 300;
-    left: 50%;
-    transform: translateX(-50%);
+  &::before,
+  &::after {
+    content: '';
+    display: block;
+    height: 1px;
+    width: 100%;
+    background: white;
   }
 }
 
@@ -237,9 +270,13 @@ body {
 // MEDIA QUERIES
 
 @media only screen and (max-width: 1500px) {
-  #work {
-    width: calc(100vw - 120px);
 
+  body,
+  html {
+    width: calc(100vw - 120px);
+  }
+
+  #work {
     .container {
       margin-top: 60px;
       margin-bottom: 60px;
@@ -253,9 +290,13 @@ body {
 }
 
 @media only screen and (max-width: 1000px) {
-  #work {
-    width: calc(100vw - 80px);
 
+  body,
+  html {
+    width: calc(100vw - 80px);
+  }
+
+  #work {
     .container {
       margin-top: 40px;
       margin-bottom: 40px;
@@ -269,9 +310,13 @@ body {
 }
 
 @media only screen and (max-width: 755px) {
-  #work {
-    width: calc(100vw - 60px);
 
+  body,
+  html {
+    width: calc(100vw - 60px);
+  }
+
+  #work {
     .container {
       margin-top: 30px;
       margin-bottom: 30px;
@@ -298,9 +343,13 @@ body {
 }
 
 @media only screen and (max-width: 500px) {
-  #work {
-    width: calc(100vw - 40px);
 
+  body,
+  html {
+    width: calc(100vw - 40px);
+  }
+
+  #work {
     .container {
       margin-top: 20px;
       margin-bottom: 20px;
